# trusted-certificate-authority

./: .bazelignore  .bazelrc  .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .versionrc.json  BUILD  CHANGELOG.md  MODULE.bazel  README.md  cargo-bazel-lock.json  cargo-no-std-bazel-lock.json  cargo-no-std-no-avx-bazel-lock.json  devkit  devkit.json
.devkit/: .gitignore  (+5 more)
.devkit/templates/cpp/: .gitlint  BUILD.bazel  MODULE.bazel
.devkit/templates/cpp/ci/: test_entrypoint
api/: .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  devkit.json
api/.devkit/: CHANGELOG.md  templates.txt
api/.devkit/.github/: CODEOWNERS
api/.devkit/.github/actions/upload-devkit-logs/: action.yaml
api/.devkit/.github/workflows/: build-rockylinux.yaml  scorecard.yaml
api/.devkit/devkit/: aws  goland_ide  jq  vendor
api/.devkit/docs/help/: build.txt  check_checksums.txt  coverage.txt  dev.txt  vscode_ide.txt
api/.devkit/docs/templates/: bootstrap.md  gitlinks.md
api/.devkit/images/: build-env-debian.Dockerfile  deps.json  gcloud-env.Dockerfile  goland-ide.Dockerfile  ide-env.Dockerfile
api/.devkit/scripts/: container_event_handler.py  gcloud_setup  list_external_mounts.py  test_find_project_root.py
api/.devkit/scripts/docker/: build.py
api/.devkit/templates/common/: devkit.json
api/.devkit/templates/cpp/: .bazelrc  .bazelversion  .gitignore  MODULE.bazel.lock.llvm_bootstrapped.include  MODULE.bazel.lock.llvm_custom_sysroot.include  checksums.txt  src
api/.devkit/tools/ci/: common-build
api/.devkit/tools/ci/utils/: test_devkit_check_checksums.sh  test_devkit_execute_in_subdirectories.sh  test_devkit_stdin.sh
api/google/pes/policy/v1/: BUILD  publisher_policy.proto
api/google/pes/v1/: BUILD  endorsement.proto  public_endorsement_service.proto  verification_material.proto
api/google/tca/policy/v1/: BUILD  tca_policy.proto
api/google/tca/policy/v2/: BUILD  tca_policy.proto
api/google/tca/v1/: BUILD  transparent_certificate_authority.proto  trusted_certificate_authority.proto
api/google/tledger/v1/: BUILD  entry.proto  transparent_ledger.proto
container-tools/: .bazelrc  .codespellrc  .gitignore  .gitlint  .pre-commit-config.yaml  BUILD  CHANGELOG.md  MODULE.bazel  README.md  checksums.txt  devkit.json
container-tools/.devkit/: .codespellrc  .coveragerc  .gitlint  .pylintrc  CHANGELOG.md  devkit.json
container-tools/.devkit/.github/: dependabot.yaml
container-tools/.devkit/.github/actions/set-git-identity/: action.yaml
container-tools/.devkit/.github/workflows/: build.yaml
container-tools/.devkit/devkit/: bep  build  coverage  gcloud  gitlinks  gitlint  nvim  tool  vscode_server
container-tools/.devkit/docs/help/: bootstrap.txt  gitlinks.txt
container-tools/.devkit/docs/templates/: bep.md  vendor.md  vscode_ide.md
container-tools/.devkit/images/: intellij-ide.Dockerfile  vscode-ide.Dockerfile
container-tools/.devkit/scripts/: bootstrap.py  build_and_run  find_project_root.py  test_coverage_report.py  test_docker_cleanup.py
container-tools/.devkit/templates/common/: .bazelignore
container-tools/.devkit/templates/cpp/: .clang-format  .pre-commit-config.yaml  checksums.txt  devkit.json
container-tools/.devkit/templates/cpp/ci/: test
container-tools/.devkit/tools/ci/utils/: build_docs  test_devkit_get_architecture.sh
container-tools/build_defs/aws/enclave/: BUILD  allocator.template.yaml  aws_eif_and_ami.bzl  configure-fluent-bit.service  configure_fluent_bit.sh  container.bzl  enclave.service  enclave_watcher.sh  enclave_watcher_rpm.bzl  fluent-bit.conf  fluent-bit.repo  logback.xml  override.conf  pcit_enclave_ami.pkr.hcl  setup_enclave.sh
container-tools/build_defs/aws/enclave/test/: BUILD  hello_world.java
container-tools/build_defs/aws/metrics/: BUILD  configure_metrics_exporter.sh  metrics-exporter.service
container-tools/cc/aws/proxy/: BUILD  readme.md
container-tools/cc/aws/proxy/src/: client_session_pool.cc  preload.cc  protocol.h  proxify.cc  proxy_bridge.cc  proxy_bridge.h  proxy_server.cc  socket_vendor_server.cc  socks5_state.cc
container-tools/cc/aws/proxy/test/: client_session_pool_test.cc  preload_exported_symbols.sh  proxy_bridge_test.cc
container-tools/licenses/: BUILD
container-tools/operator/worker/aws/build_defs/: ami.bzl
mbs/: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  CHANGELOG.md  CODE_OF_CONDUCT.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  devkit.json
mbs/.devkit/: mypy.ini
mbs/.devkit/.github/actions/free-disk-space/: action.yaml
mbs/.devkit/.github/workflows/: build-debian.yaml
mbs/.devkit/devkit/: bootstrap  build-rockylinux  clion_ide  commit-and-tag-version  dev  gemini  get-architecture  intellij_ide  nitro-cli  pre-commit
mbs/.devkit/docs/templates/: check_checksums.md  dev.md
mbs/.devkit/images/: dev-env.Dockerfile  vscode-ide.Dockerfile  vscode-server.Dockerfile
mbs/.devkit/scripts/: bep.py  coverage_report.py  docker_cleanup.py  entrypoint_docker  lib_logging.sh  test_bootstrap_templating.py  test_container_event_handler.py
mbs/.devkit/scripts/docker/: test_build.py
mbs/.devkit/templates/common/cpp/: .clang-format
mbs/.devkit/templates/cpp/: .bazelignore
mbs/.devkit/templates/cpp/coverage/: thresholds.json
mbs/.devkit/tools/ci/: common-image  pre-commit
mbs/.devkit/tools/ci/utils/: test_devkit_gitlinks.sh  test_devkit_vendor.sh
mbs/java/com/google/kmsclient/: BUILD  KmsClientInterface.java  KmsException.java  KmsGeneratedKey.java
mbs/java/com/google/mbs/: BUILD  DummyMeasurementBoundCertificateProvider.java  KeyBackupBucketProperties.java  KeyBackupBucketPropertiesFactory.java  KeyPairs.java  KmsMeasurementBoundCertificateProvider.java  MbsCertificateFactory.java  MeasurementBoundCertificate.java  MeasurementBoundCertificateProvider.java  Metrics.java  NoOpMetrics.java
mbs/java/com/google/tlog/: BUILD  RekorClientImpl.java  TlogEntry.java  TransparencyLogClient.java
mbs/licenses/: .gitignore  exclusion.txt  targets.json
(+280 files in other folders)
