# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "pcit_api",
    version = "0.0.0",
)

bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "googleapis", version = "0.0.0-20251211-05f65958")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "oak", version = "0.0.0")
archive_override(
    module_name = "oak",
    sha256 = "96f8c60c00f87e905141e1cd12ccee53ec1028b7a52b9969b7bac833efd0e58f",
    strip_prefix = "oak-125200702f216cf02ac218fe6737f44cd001c803",
    url = "https://github.com/project-oak/oak/archive/125200702f216cf02ac218fe6737f44cd001c803.tar.gz",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "confidential-federated-compute",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    dev_dependency = True,
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz"],
)

bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "cpp_toolchain",
    llvm_version = "20.1.0",
)
llvm.sysroot(
    name = "cpp_toolchain",
    label = "@confidential-federated-compute//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "cpp_toolchain")

register_toolchains(
    "@cpp_toolchain//:all",
    dev_dependency = True,
)
