module(name = "pcit_mbs")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_rust", version = "0.65.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "googleapis-python", version = "1.0.0")
bazel_dep(name = "grpc-java", version = "1.71.0", repo_name = "io_grpc_grpc_java")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "cpp_toolchain",
    llvm_version = "20.1.0",
)
use_repo(llvm, "cpp_toolchain")

register_toolchains(
    "@cpp_toolchain//:all",
    dev_dependency = True,
)

http_archive(
    name = "confidential-federated-compute",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    dev_dependency = True,
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz"],
)

llvm.sysroot(
    name = "cpp_toolchain",
    label = "@confidential-federated-compute//:sysroot",
    targets = ["linux-x86_64"],
)

http_archive(
    name = "aws-nitro-enclaves-nsm-api_src",
    build_file = "//java/com/google/platform/aws/nsm:libnsm_static.BUILD",
    sha256 = "b31783dba1a8e52f2232f79362886fe18e50d077f2e15f487779ed8677ffe905",
    strip_prefix = "aws-nitro-enclaves-nsm-api-0.4.0",
    urls = ["https://github.com/aws/aws-nitro-enclaves-nsm-api/archive/refs/tags/v0.4.0.tar.gz"],
)

AWS_SDK_VERSION = "2.21.17"

BOUNCY_CASTLE_VERSION = "1.80"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.auto.value:auto-value:1.11.0",
        "com.google.flogger:flogger-system-backend:0.9",
        "com.google.guava:guava:33.3.1-jre",
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.4",
        "org.mockito:mockito-core:3.12.4",
        "com.google.code.gson:gson:2.11.0",
        "org.bouncycastle:bcprov-jdk18on:" + BOUNCY_CASTLE_VERSION,
        "org.bouncycastle:bcpkix-jdk18on:" + BOUNCY_CASTLE_VERSION,
        "software.amazon.awssdk:s3:" + AWS_SDK_VERSION,
        "software.amazon.awssdk:auth:" + AWS_SDK_VERSION,
        "software.amazon.awssdk:kms:" + AWS_SDK_VERSION,
        "software.amazon.awssdk:regions:" + AWS_SDK_VERSION,
        "software.amazon.awssdk:sdk-core:" + AWS_SDK_VERSION,
        "dev.sigstore:sigstore-java:2.0.0-rc1",
        "jakarta.inject:jakarta.inject-api:2.0.1",
        "commons-io:commons-io:2.18.0",
        "com.google.inject:guice:7.0.0",
        "com.google.crypto.tink:tink:1.16.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    versions = ["1.87.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "aws-nitro-enclaves-nsm-api",
    version = "0.4.0",
)
crate.spec(
    package = "serde_bytes",
    version = "0.11",
)
crate.from_specs(name = "mbs_crates")
use_repo(crate, crates = "mbs_crates")
